--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,18 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_YWNjZXB0ZWQtbWFybW9zZXQtMTcuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_GEMINI_API_KEY=AIzaSyDZc486tt_ydC7tYUez0z9Uv3LggTwkrek
+
+# curl "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent" \
+#   -H 'Content-Type: application/json' \
+#   -H 'X-goog-api-key: AIzaSyDZc486tt_ydC7tYUez0z9Uv3LggTwkrek' \
+#   -X POST \
+#   -d '{
+#     "contents": [
+#       {
+#         "parts": [
+#           {
+#             "text": "Explain how AI works in a few words"
+#           }
+#         ]
+#       }
+#     ]
+#   }'
